--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "REPLACEME-AUTHOR-SLASH-REPO",
+  "name": "elm-nlds",
   "version": "0.0.1",
-  "description": "REPLACEME",
+  "description": "Natural language parser for loosely ordered token sequences",
   "devDependencies": {
     "elm-review": "^2.13.5",
     "elm-test": "^0.19.1-revision17",
@@ -13,6 +13,6 @@
     "test": "elm-verify-examples --run-tests && elm-test",
     "postinstall": "elm-tooling install"
   },
-  "author": "REPLACEME",
-  "license": "BSD-3-Clause"
+  "author": "Pete Murphy",
+  "license": "MIT"
 }
